src/Styles/style.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

:root{
  --header-color: hsl(240, 58%, 49%);
  --cities-list-color: hsl(270, 1%, 27%);
}

body {
  overscroll-behavior: contain;
  touch-action: none;
}

#content{
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns:  20rem 1fr;
  grid-template-rows: auto 1fr;
  grid-template-areas:
  'searchBar cityBar'
  'citiesContainer weatherContainer';
}

/* search bar */

#searchBar{
  grid-area: searchBar;
  display: grid;
  grid-template-columns: 2rem 1fr 2rem;
  grid-template-areas: '. searchEntry closeSidebarButton';
  background-color: var(--header-color);
  align-items: center;
  padding: 1em;
}

#searchEntry{
grid-area: searchEntry;
height: 2rem;
border-radius: 1rem;
border:none;
padding: 1rem;
}

#closeSidebarButton{
grid-area: closeSidebarButton;
background: none;
border: none;
color:white;
}

#closeSidebarButton:hover{
  cursor: pointer;
  color: hsla(0, 0%, 85%, 0.75);
}


/* cities container */

#citiesContainer{
  grid-area: citiesContainer;
  background-color: var(--cities-list-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  border-top: 2px solid black;
}

#searchResults{
  display: none;
  flex-direction: column;
  align-items: center;
  background-color: hsla(0, 0%, 100%, 0.95);
  width: 18rem;
  position: absolute;
  flex-grow:1;
}

#searchResults button{
  width: 100%;
  text-align: center;
  color: black;
  border: none;
  font-size: 1rem;
}

#searchResults button:hover, #searchResults button:focus {
  cursor: pointer;
  background-color: hsla(0, 0%, 80%, 1);
}


#citiesList{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: .25rem;
  flex-grow: 1;
}

#citiesList button{
  display: grid;
  grid-template-columns: 1fr 3fr 2fr auto;
  align-items: center;
  width: 100%;
  margin: .25rem 1rem;
  padding: .25rem 1rem;
  background-color: white;
  border: none;
  border-radius: 1rem;
  color: black;
  font-size: 1rem;
}

#citiesList button:hover, #citiesList button:focus{
  background-color: hsla(0, 0%, 80%, 1);
}

#webAttribution{
  color: white;
  text-decoration: none;
}

/* city bar */

#cityBar{
  grid-area: cityBar;
  display: grid;
  grid-template-columns: 2rem 1fr 2rem;
  grid-template-areas: 'openSidebarButton cityNameTitle menuContainer';
  background-color: var(--header-color);
  align-items: center;
  padding: 1em;
}

#openSidebarButton{
  grid-area: openSidebarButton;
  height: 2rem;
  background: none;
  border: none;
  justify-self: flex-start;
  display: none;
  color:white;
}

#openSidebarButton:hover{
  cursor: pointer;
  color: hsla(0, 0%, 85%, 0.75);
}

#cityNameTitle{
  grid-area: cityNameTitle;
  justify-self: center;
  font-size: 2rem;
  color: white;
  text-align: center;
}

#menu{
  grid-area: menuContainer;
  height: 2rem;
  width: 2rem;
  background: none;
  border: none;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
}
.menuContents{
  display: flex;
  top: 4rem;
  flex-direction: column;
  position: absolute;
  z-index: 999;
  background-color: white;
}

.menuContents button{
  padding: 1em;
  border: none;
  color:black
}

.menuContents button:hover{
  background-color: hsla(0, 0%, 85%, 0.75);
}


.menuHide{
  display: none;
}

#menuButton{
  background: none;
  border: none;
  height:2rem;
  color:white;

}
#menuButton:hover{
  cursor: pointer;
  color: hsl(0, 0%, 80%);
}

/* Weather Container */

#weatherContainer{
  grid-area: weatherContainer;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  transition: background-image 0.5s ease-in-out; 
}
#weatherContainer::before{
  background-color: hsl(0, 0%, 0%);
}

#placeholderTextWeatherContainer{
  margin-top: 1rem;
  font-size: 2rem;
  text-align: center;
}

#weatherSubcontainer{
  display: grid;
  width: min(80%, 500px);
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1.2fr 1fr 1fr 1fr;
  grid-template-areas:
  'currentTemp currentTemp'
  'currentConditions currentConditions'
  'dailyHigh dailyLow'
  'sunrise sunset';
  background-color: hsla(0, 0%, 100%, 0.75);
  margin-top: 2rem;
}

#weatherPageTemp{
  grid-area: currentTemp;
  align-self: center;
  justify-self: center;
  font-size: min(7rem, 10vw);
}
#weatherPageConditions{
  grid-area: currentConditions;
  align-self: center;
  justify-self: center;
  font-size: min(4rem, 5vw)
}
#weatherPageHighTemp{
  grid-area: dailyHigh;
  align-self: center;
  justify-self: center;
  font-size: min(3rem, 4vw);
}
#weatherPageLowTemp{
  grid-area: dailyLow;
  align-self: center;
  justify-self: center;
  font-size: min(3rem, 4vw);
}

#sunriseTime{
  grid-area: sunrise;
  align-self: center;
  justify-self: center;
  font-size: min(2rem, 4vw);
}

#sunsetTime{
  grid-area: sunset;
  align-self: center;
  justify-self: center;
  font-size: min(2rem, 4vw);
}

/* media queries */

@media screen and (max-width: 600px) {
  :root{
    font-size: 1.5em;
  }
  
  #openSidebarButton{ 
    display: block;
  }

  #content {
    grid-template-columns: 0px 1fr;
  }
  input[type="text"],
  input[type="number"],
  input[type="email"],
  input[type="tel"],
  input[type="password"] {
    font-size: 16px;
  }
}

